# Ani-Log

./: .env  .gitignore  README.md  docker-compose.yml  start.ps1
backend/: Dockerfile  main.py  mock_server.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  capture.py  characters.py  scenes.py  search.py  sessions.py  summary.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  models.py  schemas.py
backend/app/services/: __init__.py  detector.py  feature_extractor.py  frame_processor.py  scene_analyzer.py  summarizer.py  tracker.py  vector_store.py
backend/app/tasks/: __init__.py  capture_tasks.py
backend/data/: ani_log.db
capture_engine/: CMakeLists.txt
capture_engine/src/: frame_sampler.cpp  frame_sampler.h  ipc_bridge.cpp  ipc_bridge.h  main.cpp  screen_capture.cpp  screen_capture.h  screen_capture_win.cpp
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/capture/: page.tsx
frontend/src/app/characters/: page.tsx
frontend/src/app/scenes/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/components/: AppSidebar.tsx  CaptureControl.tsx  CharacterCard.tsx  Navbar.tsx  SceneTimeline.tsx  SearchBar.tsx  StoryArcSummary.tsx  ThemeProvider.tsx
frontend/src/components/ui/: container-scroll-animation.tsx  sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: useCaptureStore.ts  useSearchStore.ts
frontend/src/types/: index.ts
(+2 files in other folders)
